; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_dnd_init_window.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_x11_common.c_vo_x11_dnd_init_window.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo = type { %struct.vo_x11_state* }
%struct.vo_x11_state = type { i32, i32 }

@DND_VERSION = common dso_local global i32 0, align 4
@XdndAware = common dso_local global i32 0, align 4
@XA_ATOM = common dso_local global i32 0, align 4
@PropModeReplace = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo*)* @vo_x11_dnd_init_window to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @vo_x11_dnd_init_window(%struct.vo* %0) #0 {
  %2 = alloca %struct.vo*, align 8
  %3 = alloca %struct.vo_x11_state*, align 8
  %4 = alloca i32, align 4
  store %struct.vo* %0, %struct.vo** %2, align 8
  %5 = load %struct.vo*, %struct.vo** %2, align 8
  %6 = getelementptr inbounds %struct.vo, %struct.vo* %5, i32 0, i32 0
  %7 = load %struct.vo_x11_state*, %struct.vo_x11_state** %6, align 8
  store %struct.vo_x11_state* %7, %struct.vo_x11_state** %3, align 8
  %8 = load i32, i32* @DND_VERSION, align 4
  store i32 %8, i32* %4, align 4
  %9 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %10 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %13 = getelementptr inbounds %struct.vo_x11_state, %struct.vo_x11_state* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.vo_x11_state*, %struct.vo_x11_state** %3, align 8
  %16 = load i32, i32* @XdndAware, align 4
  %17 = call i32 @XA(%struct.vo_x11_state* %15, i32 %16)
  %18 = load i32, i32* @XA_ATOM, align 4
  %19 = load i32, i32* @PropModeReplace, align 4
  %20 = bitcast i32* %4 to i8*
  %21 = call i32 @XChangeProperty(i32 %11, i32 %14, i32 %17, i32 %18, i32 32, i32 %19, i8* %20, i32 1)
  ret void
}

declare dso_local i32 @XChangeProperty(i32, i32, i32, i32, i32, i32, i8*, i32) #1

declare dso_local i32 @XA(%struct.vo_x11_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
